backstage.io/backstage-deployment.yaml
# kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      serviceAccountName: backstage
      volumes:
      - name: backstage-config-volume
        configMap:
          # Provide the name of the ConfigMap containing the files you want
          # to add to the container
          name: backstage-config
      containers:
        - name: backstage
          volumeMounts:
          - name: backstage-config-volume
            mountPath: /etc/config
          image: 004889159502.dkr.ecr.us-east-1.amazonaws.com/demo-backstage:a036cd0c92dbb770a35dd8f91be8896e300447f2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
