backstage.io/backstage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_301"},"Type":"redirect"}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:004889159502:certificate/b68381cc-f4c0-4aa3-b686-a719a02ee873
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/alias: "true"
    kubernetes.io/ingress.class: alb
  generation: 2
  name: backstage
  namespace: backstage
spec:
  rules:
  - host: backstage.techsdemo.com
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              number: 7007
        path: /*
        pathType: ImplementationSpecific
